# bot-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: env.py  main.py  update.py
tests/: test_automa.py  test_health.py
tests/fixtures/: task.json
