[project]
name    = "bot-python"
version = "0.1.0"

requires-python = ">=3.11"

classifiers = ["Private :: Do Not Upload"]

dependencies = [
    "automa-bot~=0.3.0",
    "fastapi-cli~=0.0.7",
    "fastapi~=0.115.11",
    "pydantic-settings>=2.8.1,<3",
    "uvicorn~=0.34.0",
]

[dependency-groups]
dev = ["httpx~=0.28.1", "pytest>=8.3.5,<9", "ruff~=0.11.2"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths  = ["tests"]
